replace Syncfusion.PdfToImageConverter with PDFtoImage

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
                 </ul>
                 <p class="card-text">
                     Aplikacja wykorzystuje bibliotekę <strong>ZXing.Net</strong> do odczytu kodów kreskowych i kodów QR z obrazów.
-                    Pliki PDF konwertowane są na obrazy za pomocą biblioteki <strong>Syncfusion.PdfToImageConverter.Net</strong>.
+                    Pliki PDF konwertowane są na obrazy za pomocą biblioteki <strong>PDFtoImage</strong>.
                     Aplikacja obsługuje formaty: PDF, JPG, PNG, BMP, GIF oraz TIFF.
                 </p>
                 <h5 class="card-title mt-4">Technologie</h5>
@@ -106,7 +106,7 @@
                 <ul>
                     <li>ASP.NET Core 8.0 - nowoczesna platforma do tworzenia aplikacji webowych</li>
                     <li>ZXing.Net - biblioteka do odczytu kodów kreskowych i QR</li>
-                    <li>Syncfusion PDF to Image Converter - konwersja plików PDF do obrazów</li>
+                    <li>PDFtoImage - konwersja plików PDF do obrazów</li>
                     <li>Bootstrap 5 - framework CSS do tworzenia responsywnego interfejsu</li>
                     <li>Docker - konteneryzacja aplikacji dla łatwego wdrożenia</li>
                 </ul>
